# proyectoAplicacion2024

./: CMakeLists.txt  extractor.cpp  graph.cpp  graph.hpp  inputModel.cpp  inputModel.hpp  main.cpp  model.hpp  readme.txt
models/: model_lenet5.h5  modelo_saved.h5  structure.h5
